--- a/Patterns/pom.xml
+++ b/Patterns/pom.xml
@@ -23,10 +23,20 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+			    <groupId>picocontainer</groupId>
+			    <artifactId>picocontainer</artifactId>
+			    <version>1.2</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+		    <groupId>picocontainer</groupId>
+		    <artifactId>picocontainer</artifactId>
+		    <scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
